# task-manager

./: .gitignore  README.md  docker-compose.yaml
documentation/: arcitecture.md  pair-programming  pair-programming.md  tech_debt_report  ux.md
front/: components.html  lera.html  main.html  notifications.html
management-engine/: .env  Cargo.toml  Dockerfile  docker-compose.yml
management-engine/api/: Cargo.toml
management-engine/api/src/: auth.rs
management-engine/clients/: Cargo.toml
management-engine/clients/src/: user.rs
management-engine/controllers/: Cargo.toml
management-engine/controllers/src/: user.rs
management-engine/models/: Cargo.toml
management-engine/models/src/: user.rs
management-engine/models/src/dto/: user.rs
management-engine/shared/: Cargo.toml
management-engine/shared/src/: response.rs
task-service/: Dockerfile  README.MD  go.mod
task-service/cmd/task-service/: main.go
task-service/config/: local.yaml
task-service/internal/config/: config.go
task-service/internal/http-server/handlers/task/delete/: delete.go
task-service/internal/http-server/handlers/task/get/: get.go
task-service/internal/http-server/handlers/task/get_by_author/: get_by_author.go
task-service/internal/http-server/handlers/task/save/: save.go
task-service/internal/http-server/handlers/task/update/: update.go
task-service/internal/lib/api/response/: response.go
task-service/internal/model/task/: task.go
task-service/internal/storage/: storage.go
task-service/internal/storage/sqlite/: sqlite.go
